# libfg2

./: .gitignore  Doxyfile  Makefile.am  README  README.markdown  README.md  SConstruct  autogen.sh  cleantree.sh  config.h.in  configure.ac  libfg2.h  libfg2.h.in
doc/: libfg2.doxygen  makefile
examples/: Makefile.am  camsnap-vala.vala  camsnap.vala  camview-gtk.c  camview-sdl.c  camview-sdl2.c  fg-udev.c  test.c
gtk/: Makefile.am  gtkcamera.c  gtkcamera.h
gtkcamera/: Makefile.am  gtk3camera.pc.in  gtkcamera.c  gtkcamera.h  gtkcamera.pc.in
include/: libfg2.h
lib/pkgconfig/: libfg2.pc
libfg2/: Makefile.am  capture.c  control.c  convert.c  convert.h  frame-gdkpixbuf.c  frame-imlib2.c  frame-opencv.c  frame-sdl.c  frame.c  libfg2-gdkpixbuf.h  libfg2-gdkpixbuf.pc.in  libfg2-imlib2.h  libfg2-imlib2.pc.in  libfg2-opencv.h  libfg2-opencv.pc.in  libfg2-sdl.h  libfg2-sdl.pc.in  libfg2-sdl2.pc.in  libfg2-version.h.in  libfg2.h  libfg2.h.in  libfg2.pc.in  version.c
m4/: fg2_examples.m4  fg2_gdkpixbuf.m4  fg2_gtk.m4  fg2_gtk2.m4  fg2_gtk3.m4  fg2_imlib2.m4  fg2_libjpeg.m4  fg2_libv4l.m4  fg2_opencv.m4  fg2_python.m4  fg2_sdl.m4  fg2_sdl1.m4  fg2_sdl2.m4  fg2_vala.m4
pyfg2/: Makefile  fg2.c  fg2.pxd  fg2.pyx  libfg2.xml  pyfg2.pxd  pyfg2.pyx  setup.py  strip_header.py  test.py
python/: controlgen.py  controls.txt  libfg2.interface  libfg2.py  libfg2_wrap.c
src/: Makefile.am  capture.c  control.c  convert.c  example.c  fg-udev.c  frame.c  libfg2.h  libfg2.pc.in
src/examples/: Makefile.am  camview-sdl.c  camview.c
vala/: fg2.vapi
vapi/: Makefile.am  fg2.vapi
